[gd_scene load_steps=11 format=4 uid="uid://r8vifboa306g"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://blpwypcs255x4" path="res://Asset/Anime/Character/Plant/Chapter0/ThreePeater/Scene/TowerDefensePlantThreePeater.gd" id="2"]
[ext_resource type="Resource" uid="uid://bac84wqb8laum" path="res://Asset/Anime/Character/Plant/Chapter0/ThreePeater/Config/TowerDefensePlantThreePeater.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://drooiootm4kg3" path="res://Asset/Anime/Character/Plant/Chapter0/ThreePeater/ThreePeater.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b5htxrgm8twcr" path="res://Script/Component/TowerDefense/Character/FireComponent/FireComponent.tscn" id="5"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="6"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="7"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mig1w"]
b = Vector2(2000, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4kmxv"]
b = Vector2(2000, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yd1km"]
b = Vector2(2000, 0)

[node name="TowerDefensePlantThreePeater" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
fireInterval = 1.5
fireNum = 1
idleAnimeClip = "BodyIdle"
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/ThreePeater")

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="ThreePeater" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSprite") instance=ExtResource("4")]
position = Vector2(0, -30)
layerSprite = [null, null, null, null, null, null, null, null, null, NodePath("Head3"), null, null, null, null, NodePath("Head1"), null, null, null, null, null, null, NodePath("Head2"), null, null, null, null, null, null, null]

[node name="Head1" parent="SpriteGroup/TransformPoint/ThreePeater" index="0"]
position = Vector2(-16.3567, -19.7)

[node name="Head2" parent="SpriteGroup/TransformPoint/ThreePeater" index="1"]
position = Vector2(-11.872, -4.65)

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/ThreePeater/Head2" index="0"]
position = Vector2(21.162, -2.6)

[node name="Head3" parent="SpriteGroup/TransformPoint/ThreePeater" index="2"]
position = Vector2(15.3314, 10.1543)

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(0, 30)

[node name="FireComponent" parent="." index="5" node_paths=PackedStringArray("firePosMarker", "checkArea") instance=ExtResource("5")]
unique_name_in_owner = true
firePosMarker = [NodePath("../SpriteGroup/TransformPoint/ThreePeater/Head2/Marker2D")]
checkArea = NodePath("Area2D")
checkAllLine = true
fireInterval = 1.5

[node name="Area2D" type="Area2D" parent="FireComponent" index="0"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireComponent/Area2D" index="0"]
shape = SubResource("SegmentShape2D_mig1w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FireComponent/Area2D" index="1"]
unique_name_in_owner = true
position = Vector2(0, -76)
shape = SubResource("SegmentShape2D_4kmxv")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="FireComponent/Area2D" index="2"]
unique_name_in_owner = true
position = Vector2(0, 76)
shape = SubResource("SegmentShape2D_yd1km")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("6")

[node name="ToAttack" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("7")
to = NodePath("../Attack")
event = &"ToAttack"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Attack" to="." method="AttackEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack" to="." method="AttackExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack" to="." method="AttackProcessing"]

[editable path="SpriteGroup/TransformPoint/ThreePeater"]
